cleanup Day07 Part I & II